[DEV] Adjust style

--- a/src/components/MenuItem.css
+++ b/src/components/MenuItem.css
@@ -1,6 +1,6 @@
 .menu-item {
   background-color: #2e2e2e;
-  border: 2px solid #ffd700;
+  /* border: 2px solid #ffd700; */
   border-radius: 10px;
   margin-bottom: 1.5rem;
   overflow: hidden;
